--- a/index.html
+++ b/index.html
@@ -1,69 +1,220 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Airport Travel Companion</title>
     <link rel="stylesheet" href="index.css" />
-    <link rel="icon" href="./favicon.ico" />
   </head>
-
   <body>
-    <div class="main">
-      <div class="actionRowsWrap">
-        <div class="actionRow">
-          <label>
-            AvatarID
-            <input id="avatarID" type="text" />
-          </label>
-
-          <label>
-            VoiceID
-            <input id="voiceID" type="text" />
-          </label>
-
-          <button id="newBtn">New</button>
-          <button id="startBtn">Start</button>
-          <button id="closeBtn">Close</button>
+    <div class="app-container">
+      <!-- Header -->
+      <div class="header">
+        <div class="header-top">
+          <h1>Flights</h1>
+          <div class="header-icons">
+            <svg
+              class="icon"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+            >
+              <rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect>
+              <path d="M7 11V7a5 5 0 0 1 10 0v4"></path>
+            </svg>
+            <svg
+              class="icon"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+            >
+              <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
+              <circle cx="12" cy="7" r="4"></circle>
+            </svg>
+          </div>
         </div>
+        <select id="terminal-select" class="terminal-select">
+          <option value="terminal-1">Terminal 1, Domestic Departure</option>
+          <option value="terminal-2">Terminal 2, International Departure</option>
+        </select>
+      </div>
 
-        <div class="actionRow">
-          <label>
-            Message
-            <input id="taskInput" type="text" />
-          </label>
-          <button id="repeatBtn">Repeat</button>
-          <button id="talkBtn">Talk</button>
-
+      <!-- Chat Header -->
+      <div class="chat-header">
+        <div class="chat-icon">
+          <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M22 2L2 22"></path>
+            <path
+              d="M5.45 5.11L2 12v6a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-6l-3.45-6.89A2 2 0 0 0 16.76 4H7.24a2 2 0 0 0-1.79 1.11z"
+            ></path>
+            <line x1="12" y1="16" x2="12" y2="16"></line>
+          </svg>
+        </div>
+        <div class="chat-title">
+          <h2>HOI - Your Airport Travel Companion</h2>
+        </div>
+        <div class="chat-actions">
+          <button class="icon-button" id="reset-button">
+            <svg
+              class="icon"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+            >
+              <path d="M23 4v6h-6"></path>
+              <path d="M20.49 15a9 9 0 1 1-2.12-9.36L23 10"></path>
+            </svg>
+          </button>
+          <button class="icon-button" id="close-button">
+            <svg
+              class="icon"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+            >
+              <line x1="18" y1="6" x2="6" y2="18"></line>
+              <line x1="6" y1="6" x2="18" y2="18"></line>
+            </svg>
+          </button>
         </div>
       </div>
 
-      <p id="status"></p>
-
-      <div class="videoSectionWrap">
-        <div class="videoWrap">
-          <video id="mediaElement" class="videoEle show" autoplay></video>
-          <canvas id="canvasElement" class="videoEle hide"></canvas>
-        </div>
-
-        <div class="actionRow switchRow hide" id="bgCheckboxWrap">
-          <div class="switchWrap">
-            <span>Remove background</span>
-            <label class="switch">
-              <input type="checkbox" id="removeBGCheckbox" />
-              <span class="slider round"></span>
-            </label>
-          </div>
-
-          <label>
-            Background (CSS)
-            <input
-              type="text"
-              id="bgInput"
-              value='url("https://app.heygen.com/icons/heygen/logo_hori_text_light_bg.svg") center / contain no-repeat'
-            />
-          </label>
-        </div>
+      <div class="actionRow">
+        <button id="newBtn">New</button>
+        <button id="startBtn">Start</button>
+        <button id="closeBtn">Close</button>
       </div>
     </div>
 
-    <script type="module" src="index.js"></script>
+    <p id="status"></p>
+
+    <div class="videoSectionWrap">
+      <div class="videoWrap">
+        <video id="mediaElement" class="videoEle show" autoplay></video>
+        <canvas id="canvasElement" class="videoEle hide"></canvas>
+      </div>
+
+      <div class="actionRow switchRow hide" id="bgCheckboxWrap">
+        <div class="switchWrap">
+          <span>Remove background</span>
+          <label class="switch">
+            <input type="checkbox" id="removeBGCheckbox" />
+            <span class="slider round"></span>
+          </label>
+        </div>
+
+        <label>
+          Background (CSS)  
+          <input
+            type="text"
+            id="bgInput"
+            value='url("https://app.heygen.com/icons/heygen/logo_hori_text_light_bg.svg") center / contain no-repeat'
+          />
+        </label>
+      </div>
+    </div>
+
+      <!-- Input Area -->
+      <div class="input-area">
+        <input type="text" id="taskInput" placeholder="Enter your text here!" class="user-input" />
+        <button id="talkBtn" class="send-button">
+          <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <line x1="22" y1="2" x2="11" y2="13"></line>
+            <polygon points="22 2 15 22 11 13 2 9 22 2"></polygon>
+          </svg>
+        </button>
+      </div>
+
+      <!-- Floating Mic Button -->
+      <div class="floating-mic">
+        <button id="mic-button" class="mic-button">
+          <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M12 1a3 3 0 0 0-3 3v8a3 3 0 0 0 6 0V4a3 3 0 0 0-3-3z"></path>
+            <path d="M19 10v2a7 7 0 0 1-14 0v-2"></path>
+            <line x1="12" y1="19" x2="12" y2="23"></line>
+            <line x1="8" y1="23" x2="16" y2="23"></line>
+          </svg>
+        </button>
+        <div id="mic-menu" class="mic-menu hidden">
+          <button class="icon-button">
+            <svg
+              class="icon"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+            >
+              <path d="M23 4v6h-6"></path>
+              <path d="M20.49 15a9 9 0 1 1-2.12-9.36L23 10"></path>
+            </svg>
+          </button>
+          <button class="icon-button" id="close-mic-menu">
+            <svg
+              class="icon"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+            >
+              <line x1="18" y1="6" x2="6" y2="18"></line>
+              <line x1="6" y1="6" x2="18" y2="18"></line>
+            </svg>
+          </button>
+        </div>
+      </div>
+
+      <!-- Bottom Navigation -->
+      <nav class="bottom-nav">
+        <button class="nav-button">
+          <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
+            <polyline points="9 22 9 12 15 12 15 22"></polyline>
+          </svg>
+          <span>Home</span>
+        </button>
+        <button class="nav-button">
+          <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M18 8h1a4 4 0 0 1 0 8h-1"></path>
+            <path d="M2 8h16v9a4 4 0 0 1-4 4H6a4 4 0 0 1-4-4V8z"></path>
+            <line x1="6" y1="1" x2="6" y2="4"></line>
+            <line x1="10" y1="1" x2="10" y2="4"></line>
+            <line x1="14" y1="1" x2="14" y2="4"></line>
+          </svg>
+          <span>Food</span>
+        </button>
+        <button class="nav-button main-nav-button">
+          <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M22 2L2 22"></path>
+            <path
+              d="M5.45 5.11L2 12v6a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-6l-3.45-6.89A2 2 0 0 0 16.76 4H7.24a2 2 0 0 0-1.79 1.11z"
+            ></path>
+            <line x1="12" y1="16" x2="12" y2="16"></line>
+          </svg>
+        </button>
+        <button class="nav-button">
+          <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
+            <circle cx="9" cy="7" r="4"></circle>
+            <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
+            <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
+          </svg>
+          <span>Meet</span>
+        </button>
+        <button class="nav-button">
+          <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M14 2v4a2 2 0 0 0 2 2h4"></path>
+            <path d="M4.268 21a2 2 0 0 0 1.727 1H18a2 2 0 0 0 2-2V7l-5-5H6a2 2 0 0 0-2 2v3"></path>
+            <path d="m9 18-1.5-1.5"></path>
+            <circle cx="5" cy="14" r="3"></circle>
+          </svg>
+          <span>Info Desk</span>
+        </button>
+      </nav>
+    </div>
+    <script src="index.js"></script>
   </body>
 </html>
